# netfly

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  task.md
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-07-19-auto-hide-topbar.md
docs/superpowers/specs/: 2026-07-19-auto-hide-topbar-design.md
src/: actions.ts  ipc.ts  main.ts  state.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: blocklist-hosts.txt
src-tauri/src/: adblock.rs  bookmarks.rs  browser.rs  config.rs  downloads.rs  history.rs  inject.rs  lib.rs  main.rs  paths.rs  sessions.rs  userscripts.rs
src/shortcuts/: chords.ts  engine.ts  keymap.ts
src/styles/: base.css  findbar.css  overlay.css  palette.css  settings.css  sidebar.css  tokens.css  topbar.css
src/ui/: downloads-view.ts  findbar.ts  overlay.ts  palette-sources.ts  palette.ts  settings-shortcuts.ts  settings.ts  sidebar.ts  tab-item.ts  topbar.ts
src/util/: debounce.ts  dom.ts  favicon.ts
