[package]
name = "netfly"
version = "0.1.0"
description = "Minimal vim-like browser for macOS (WebKit / WKWebView)"
authors = ["miloszzajac"]
edition = "2021"

[lib]
name = "netfly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
toml = "0.8"
ureq = "2"
